--- a/dictionary/pom.xml
+++ b/dictionary/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot damn</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<formatter.plugin.version>2.12.1</formatter.plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -68,6 +69,25 @@
 			        <password>root</password>
 			        <locations>classpath:db/migration</locations>
 			    </configuration>
+			</plugin>
+			<plugin>
+				<groupId>net.revelc.code.formatter</groupId>
+				<artifactId>formatter-maven-plugin</artifactId>
+				<version>${formatter.plugin.version}</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+				<executions>
+					<execution>
+						<id>validate-code-format</id>
+						<goals>
+							<goal>format</goal>
+						</goals>
+						<configuration>
+							<configFile>eclipse-java-google-style.xml</configFile>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
